--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,48 @@
 /*  your css code here. If applicable */
+body {
+  background-color: #f5f5f5;
+  font-family: Arial, sans-serif;
+  margin: 2px;
+  padding: 0;
+}
+
+.header {
+  background-color: #011e29;
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+  padding: 30px;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.latest-news-section,
+.main-article,
+.pictorial-news-section {
+  background-color: white;
+  padding: 2px;
+  border-radius: 10px;
+}
+
+.latest-news-section,
+.pictorial-news-section {
+  width: 20%;
+  text-align: center;
+}
+
+.main-article {
+  width: 50%;
+  text-align: center;
+}
+
+.pictorial-news-section img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
